# global_font_manager

./: OAT.xml  README.en.md  README.md  README_zh.md  bundle.json
frameworks/fontmgr/: fontmgr.gni  hisysevent.yaml
frameworks/fontmgr/include/: file_utils.h  font_config.h  font_define.h  font_event_publish.h  font_hilog.h  font_manager.h  hisysevent_adapter.h
frameworks/fontmgr/src/: file_utils.cpp  font_config.cpp  font_event_publish.cpp  font_manager.cpp  hisysevent_adapter.cpp
frameworks/fontmgr/test/: BUILD.gn  ohos_test.xml
frameworks/fontmgr/test/unittest/data/: 199install_fontconfig.json  200install_fontconfig.json  errorType.txt
frameworks/fontmgr/test/unittest/include/: font_config_test.h  font_manager_test.h  hisysevent_adapter_test.h
frameworks/fontmgr/test/unittest/src/: font_config_test.cpp  font_manager_test.cpp  hisysevent_adapter_test.cpp
interfaces/js/kits/: BUILD.gn
interfaces/js/kits/include/: font_manager_addon.h  font_napi_callback.h
interfaces/js/kits/src/: font_manager_addon.cpp  font_manager_napi.cpp
patches/: patches.json
sa_profile/: 66262.json  BUILD.gn
service/: BUILD.gn  IFontService.idl  font_manager_client.map
service/etc/: BUILD.gn  font_manager_server.cfg
service/include/: font_manager_client.h  font_manager_server.h  font_sa_load_callback.h  font_service_load_manager.h
service/src/: font_manager_client.cpp  font_manager_server.cpp  font_sa_load_callback.cpp  font_service_load_manager.cpp
test/fuzztest/: BUILD.gn
test/fuzztest/serviceinstallfont_fuzzer/: BUILD.gn  fuzzer.cpp  fuzzer.h
test/fuzztest/serviceinstallfont_fuzzer/corpus/: init
test/fuzztest/serviceuninstallfont_fuzzer/: BUILD.gn  fuzzer.cpp  fuzzer.h  project.xml
test/fuzztest/utils/: fuzz_data.cpp  fuzz_data.h
