# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

root_path = "//base/global/font_manager/frameworks/fontmgr"

fontmgr_include = [
        "$root_path/include"
    ]

fontmgr_src = [
        "$root_path/src/file_utils.cpp",
        "$root_path/src/font_config.cpp",
        "$root_path/src/font_manager.cpp",
        "$root_path/src/font_event_publish.cpp",
    ]

fontmgr_external_deps = [
    "ability_base:want",
    "cJSON:cjson",
    "common_event_service:cesfwk_innerkits",
    "hilog:libhilog",
    "skia:skia_canvaskit"
]