# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import("//build/config/components/idl_tool/idl.gni")
import("../../../frameworks/fontmgr/fontmgr.gni")
##############################fuzztest##########################################

idl_gen_interface("font_service_interface") {
  src_idl = rebase_path("../../../service/IFontService.idl")
}

ohos_fuzztest("ServiceUnInstallFontFuzzTest") {
  module_out_path = "font_manager/font_manager_fuzz"
  fuzz_config_file = "//base/global/font_manager/test/fuzztest/serviceuninstallfont_fuzzer"
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  include_dirs = [
    "${target_gen_dir}",
    "../utils",
    "../../../service/include",
    "../../../frameworks/fontmgr/include",
  ]
  sources = [
    "fuzzer.cpp",
    "../utils/fuzz_data.cpp",
    "../../../service/src/font_sa_load_callback.cpp",
    "../../../service/src/font_service_load_manager.cpp"
  ]
  idl_path = get_target_outputs(":font_service_interface")
  sources += filter_include(idl_path, [ "*_stub.cpp" ])

  deps = [
    ":font_service_interface",
    "../../../service:font_service_ability",
  ]
    
  external_deps = [
    "ability_runtime:ability_manager",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  external_deps += fontmgr_external_deps
}
